refactor(core): Modernize streams and payment
- Replace .collect(Collectors.toList()) with .toList()
- Remove unused Collectors imports
- Extract payment response code check to method